--- a/sass/components/_lists.scss
+++ b/sass/components/_lists.scss
@@ -20,9 +20,10 @@ nav {
 		margin: 0;
 		padding: 0;
 		li {
-			display: inline-block;
+			display: block;
 			a {
-				display: block;
+				display: inline-block;
+				vertical-align: baseline;
 			}
 		}
 	}
